Massive updates across multiple classes. The logic has been cleaned up and stabilized.
We're closer to v1 than we were the last commit. That's for darn sure.

--- a/Launcher/LauncherWFP/App.config
+++ b/Launcher/LauncherWFP/App.config
@@ -20,10 +20,10 @@
                 <value>True</value>
             </setting>
             <setting name="OpenRctDownloadDir" serializeAs="String">
-                <value>C:\Users\Adam\AppData\Roaming\ORCT2\Downloads</value>
+                <value />
             </setting>
             <setting name="OpenRctExtractDir" serializeAs="String">
-                <value>C:\Users\Adam\AppData\Roaming\ORCT2\Builds</value>
+                <value />
             </setting>
             <setting name="AutoUpdateToLatest" serializeAs="String">
                 <value>False</value>
