--- a/Launcher/LauncherWFP/Properties/Settings.settings
+++ b/Launcher/LauncherWFP/Properties/Settings.settings
@@ -9,10 +9,10 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="OpenRctDownloadDir" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Adam\AppData\Roaming\ORCT2\Downloads</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="OpenRctExtractDir" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\Users\Adam\AppData\Roaming\ORCT2\Builds</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="AutoUpdateToLatest" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
