--- a/Launcher/LauncherWFP/packages.config
+++ b/Launcher/LauncherWFP/packages.config
@@ -4,4 +4,6 @@
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net46" developmentDependency="true" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net46" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net46" />
 </packages>
