--- a/Launcher/LauncherWFP/LauncherWPF.csproj
+++ b/Launcher/LauncherWFP/LauncherWPF.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{221F3C36-C985-4146-ABE2-5A7738A7EE01}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LauncherWFP</RootNamespace>
-    <AssemblyName>LauncherWFP</AssemblyName>
+    <RootNamespace>LauncherWPF</RootNamespace>
+    <AssemblyName>LauncherWPF</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
