Big update to get launching OpenRCT2 stable. Release and Dev branches supported independently via OpenRCT.NET API

--- a/Launcher/LauncherWFP/Properties/Settings.settings
+++ b/Launcher/LauncherWFP/Properties/Settings.settings
@@ -23,5 +23,11 @@
     <Setting Name="IsOnDevelopBranch" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ReleaseName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">stable.json</Value>
+    </Setting>
+    <Setting Name="DevelopName" Type="System.String" Scope="User">
+      <Value Profile="(Default)">develop.json</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
