--- a/Launcher/LauncherWFP/packages.config
+++ b/Launcher/LauncherWFP/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.29.2" targetFramework="net46" developmentDependency="true" />
+  <package id="Fody" version="1.29.3" targetFramework="net45" developmentDependency="true" />
+  <package id="ini-parser" version="2.2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net46" developmentDependency="true" />
