--- a/Launcher/LauncherWFP/packages.config
+++ b/Launcher/LauncherWFP/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Exceptionless.Portable" version="3.2.1424" targetFramework="net45" />
+  <package id="Exceptionless.Wpf" version="3.2.1424" targetFramework="net45" />
   <package id="Fody" version="1.29.3" targetFramework="net45" developmentDependency="true" />
   <package id="ini-parser" version="2.2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net46" />
